kubernetes/overlays/dev/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: frontend

spec:
replicas: 1
-----------

apiVersion: apps/v1
kind: Deployment
metadata:
name: backend

spec:
replicas: 1
