kubernetes/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: shared-alb-ingress

spec:
rules:
- host: dev-frontend.example.com

```
- host: dev-api.example.com
```
